--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -6,7 +6,7 @@
             </a>
         </div>
         <div class="px-5 py-2">
-            <a href="#" class="text-base leading-6 text-gray-500 hover:text-gray-900">
+            <a href="https://github.com/matthewthomasfripp/wad2" class="text-base leading-6 text-gray-500 hover:text-gray-900">
                 GitHub
             </a>
         </div>
